spacing fixes

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -54,7 +54,7 @@ h1 {
     font-weight: 900;
     font-style: normal;
     font-size: 2.5em;
-    line-height: 0em;
+    line-height: 1em;
 }
 
 nav a {
@@ -96,7 +96,7 @@ hr {
 
 .wrapper {
     display: grid;
-    gap: 20px;
+    gap: 10px;
     grid-template-areas:
         "header"
         "nav"
@@ -105,6 +105,14 @@ hr {
 }
 
 @media (min-width: 490px) { /* 490 and larger */
+    .wrapper {
+        gap: 20px;
+    }
+
+    h1 {
+        line-height: 0em;
+    }
+
     nav ul {
         display:flex;
         justify-content: space-between;
